Update CommandInjectionDemo.java